[profile.dev]
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace]
members = [
  "uidev",
  "wgui",
  "wlx-common",
  "wlx-overlay-s",
  "wlx-capture",
  "dash-frontend",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
glam = { version = "0.30.9", features = ["mint", "serde"] }
idmap = "0.2.2"
idmap-derive = "0.2.22"
log = "0.4.29"
regex = "1.12.2"
rust-embed = "8.9.0"
slotmap = "1.1.1"
vulkano = { version = "0.35.2", default-features = false, features = [
  "macros",
] }
vulkano-shaders = "0.35.0"
wayland-client = { version = "0.31.11" }
wayvr_ipc = { git = "https://github.com/olekolek1000/wayvr-ipc.git", rev = "6d253ef9e36db0f181566030a4990454ecb60395", default-features = false }
