[profile.dev]
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace]
members = [
  "uidev",
  "wgui",
  "wlx-common",
  "wlx-overlay-s",
  "wlx-capture",
  "dash-frontend",
  "wayvr-ipc",
  "wayvrctl",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
glam = { version = "0.30.9", features = ["mint", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
freedesktop = { git = "https://github.com/galister/freedesktop.git", rev = "2c1e653", default-features = false, features = ["core"] }
# freedesktop = { version = "0.0.3", default-features = false, features = ["core"] }
idmap = "0.2.2"
idmap-derive = "0.2.22"
log = "0.4.29"
regex = "1.12.2"
rust-embed = "8.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
slotmap = "1.1.1"
vulkano = { version = "0.35.2", default-features = false, features = [
  "macros",
] }
vulkano-shaders = "0.35.0"
wayland-client = { version = "0.31.11" }
