[profile.dev]
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
incremental = true

# to be used in case if you don't want debug features
# (faster incremental compilation, about 15x smaller binary size compared to dev)
# --profile=plain
[profile.plain]
inherits = "dev"
opt-level = 1
debug = false
strip = true
debug-assertions = true
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace]
members = [
  "uidev",
  "wgui",
  "wlx-common",
  "wayvr",
  "wlx-capture",
  "dash-frontend",
  "wayvr-ipc",
  "wayvrctl",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
glam = { version = "0.30.9", features = ["mint", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
xdg = "3.0.0"
idmap = "0.2.2"
idmap-derive = "0.2.22"
log = "0.4.29"
regex = "1.12.2"
rust-embed = "8.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
slotmap = "1.1.1"
strum = { version = "0.27.2", features = ["derive"] }
# vulkano = { version = "0.35.2", default-features = false, features = [
vulkano = { git = "https://github.com/galister/vulkano.git", rev = "ee170056e0402e18eb352df36894aa1f1d35aaad", default-features = false, features = [
  "macros",
] }
vulkano-shaders = "0.35.0"
wayland-client = { version = "0.31.11" }
