[package]
name = "dash-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
wgui = { path = "../wgui/" }
glam = { workspace = true, features = ["mint", "serde"] }
log.workspace = true
rust-embed.workspace = true
chrono = "0.4.42"
gio = "0.21.5"
gtk = "0.18.2"
serde.workspace = true
serde_json.workspace = true
wlx-common = { path = "../wlx-common" }
wayvr-ipc = { path = "../wayvr-ipc", default-features = false }
base64 = "0.22.1"
keyvalues-parser = { git = "https://github.com/CosmicHorrorDev/vdf-rs.git", rev = "fc6dcbea9eb13cacb98dea40063f6f56cde6e145" }
steam_shortcuts_util = "1.1.8"
