[package]
name = "uidev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
rust-embed = "8.7.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgui = { path = "../wgui/" }
winit = "0.30.10"
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
