[package]
name = "wayvr-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
smallvec = "1.13.2"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.93"
log = "0.4.22"

# client-only deps
interprocess = { version = "2.2.2", features = ["tokio"], optional = true }
tokio = { version = "1.43.1", features = ["macros"], optional = true }
tokio-util = { version = "0.7.13", optional = true }
serde_json = "1.0.135"

[features]
default = ["client"]
client = ["dep:tokio", "dep:tokio-util", "dep:interprocess"]
