[package]
name = "wgui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cosmic-text = "0.15.0"
etagere = "0.2.15"
glam = { workspace = true }
image = { version = "0.25.9", default-features = false, features = [
  "gif",
  "jpeg",
  "png",
  "rayon",
  "webp",
] }
log = { workspace = true }
lru = "0.16.2"
ouroboros = "0.18.5"
parking_lot = "0.12.5"
regex = { workspace = true }
resvg = { version = "0.45.1", default-features = false }
roxmltree = "0.21.1"
rustc-hash = "2.1.1"
serde_json = "1.0.145"
slotmap = { workspace = true }
smallvec = "1.15.1"
taffy = "0.9.2"
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
rust-embed = { workspace = true }
flate2 = "1.1.5"
