[package]
name = "wlx-common"
version = "0.1.0"
edition = "2024"


[dependencies]
wayvr-ipc = { path = "../wayvr-ipc", default-features = false }

freedesktop.workspace = true
anyhow.workspace = true
glam.workspace = true
idmap = { workspace = true, features = ["serde"] }
idmap-derive.workspace = true
log.workspace = true
serde = { workspace = true, features = ["rc"] }

chrono = "0.4.42"
smol = "2.0.2"
