[package]
name = "wlx-common"
version = "0.1.0"
edition = "2024"


[dependencies]
wayvr-ipc = { path = "../wayvr-ipc", default-features = false }

anyhow.workspace = true
glam.workspace = true
idmap = { workspace = true, features = ["serde"] }
idmap-derive.workspace = true
log.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
xdg.workspace = true
chrono = "0.4.42"
smol = "2.0.2"
wgui = { path = "../wgui/" }
rodio = { version = "0.21.1", default-features = false, features = [
  "playback",
  "mp3",
  "hound",
] }
glob = "0.3.3"
walkdir = "2.5.0"
rust-ini = "0.21.3"
identicons-svg = "0.1.0"
